--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Projeto portifolio</title>
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/85341b6a6c.js"
   crossorigin="anonymous"></script>
 </head>
@@ -209,6 +209,6 @@
     Feito Por <a href="">Gustavo Guanabara</a> para o
     <a href="">Curso em Vídeo</a>  
   </div>
-  <script src="scripts/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
