Update image source paths in index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
   <div id="container">
     <div id="ficha">
-      <img src="images/guanabara-perfil.jpg" alt="" id="foto">
+      <img src="guanabara-perfil.jpg" alt="" id="foto">
       <h1>Gustavo Guanabara</h1>
       <p>Formado em Ciência da Computação, com especialização em docência
       superior, desenvolvimento web e inteligência artificial. Apaixonado
@@ -171,7 +171,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique incidunt nihil nostrum expedita at dolore. Mollitia harum natus iure minima error dignissimos ducimus, qui culpa deserunt eum quis, unde cumque.</p>
               </details>
             </div>
-            <div class="imagem"><img src="images/projeto-01-videos.jpg" alt=""></div>
+            <div class="imagem"><img src="projeto-01-videos.jpg" alt=""></div>
           </div>
           
           <div class="item">
@@ -185,7 +185,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique incidunt nihil nostrum expedita at dolore. Mollitia harum natus iure minima error dignissimos ducimus, qui culpa deserunt eum quis, unde cumque.</p>
               </details>
             </div>
-            <div class="imagem"><img src="images/projeto-03-android.jpg" alt=""></div>
+            <div class="imagem"><img src="projeto-03-android.jpg" alt=""></div>
           </div>
           
           <div class="item">
@@ -199,7 +199,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique incidunt nihil nostrum expedita at dolore. Mollitia harum natus iure minima error dignissimos ducimus, qui culpa deserunt eum quis, unde cumque.</p>
               </details>
             </div>
-            <div class="imagem"><img src="images/projeto-02-cordel.jpg" alt=""></div>
+            <div class="imagem"><img src="projeto-02-cordel.jpg" alt=""></div>
           </div>
         </div>
       </div>
