Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           <div class="item">
             <div class="info">
               <div class="data">2022</div>
-              <div><h1>Projeto de vídeos</h1></div>
+              <div><h1>Projeto vídeos</h1></div>
               <div class="detalhes">Projeto construído para treinar a inserção
               de vídeos em nosso site.</div>
               <details>
