--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Projeto portifolio</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/x-icon" href="favicon.svg">
   <script src="https://kit.fontawesome.com/85341b6a6c.js"
   crossorigin="anonymous"></script>
 </head>
