--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Projeto portifolio</title>
+  <title>Portifolio</title>
   <link rel="stylesheet" href="styles/style.css">
   <link rel="icon" type="image/x-icon" href="favicon.svg">
   <script src="https://kit.fontawesome.com/85341b6a6c.js"
