Update image paths in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Portifolio</title>
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/x-icon" href="favicon.svg">
   <script src="https://kit.fontawesome.com/85341b6a6c.js"
   crossorigin="anonymous"></script>
@@ -22,7 +22,7 @@
   </div>
   <div id="container">
     <div id="ficha">
-      <img src="images/guanabara-perfil.jpg" alt="" id="foto">
+      <img src="guanabara-perfil.jpg" alt="" id="foto">
       <h1>Gustavo Guanabara</h1>
       <p>Formado em Ciência da Computação, com especialização em docência
       superior, desenvolvimento web e inteligência artificial. Apaixonado
@@ -172,7 +172,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique incidunt nihil nostrum expedita at dolore. Mollitia harum natus iure minima error dignissimos ducimus, qui culpa deserunt eum quis, unde cumque.</p>
               </details>
             </div>
-            <div class="imagem"><img src="images/projeto-01-videos.jpg" alt=""></div>
+            <div class="imagem"><img src="projeto-01-videos.jpg" alt=""></div>
           </div>
           
           <div class="item">
@@ -186,7 +186,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique incidunt nihil nostrum expedita at dolore. Mollitia harum natus iure minima error dignissimos ducimus, qui culpa deserunt eum quis, unde cumque.</p>
               </details>
             </div>
-            <div class="imagem"><img src="images/projeto-03-android.jpg" alt=""></div>
+            <div class="imagem"><img src="projeto-03-android.jpg" alt=""></div>
           </div>
           
           <div class="item">
@@ -200,7 +200,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique incidunt nihil nostrum expedita at dolore. Mollitia harum natus iure minima error dignissimos ducimus, qui culpa deserunt eum quis, unde cumque.</p>
               </details>
             </div>
-            <div class="imagem"><img src="images/projeto-02-cordel.jpg" alt=""></div>
+            <div class="imagem"><img src="projeto-02-cordel.jpg" alt=""></div>
           </div>
         </div>
       </div>
