--- a/index.html
+++ b/index.html
@@ -210,6 +210,6 @@
     Feito Por <a href="">Gustavo Guanabara</a> para o
     <a href="">Curso em Vídeo</a>  
   </div>
-  <script src="scripts/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
